--- a/config.yaml
+++ b/config.yaml
@@ -3,5 +3,5 @@ db:
   host: localhost
   port: 5432
   database: ecommerce
-  user: postgres
-  password: your_password_here
+  user: ecommerce_user
+  password: MyNewPassword@=.me
